cleanup turn